added initial markup and main object 'sun'

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="wrapper__line">
+            <div class="wrapper__item">1</div>
+            <div class="wrapper__item">2</div>
+            <div class="wrapper__item">3</div>
+        </div>
+        <div class="wrapper__line">
+            <div class="wrapper__item">4</div>
+            <div class="wrapper__item">
+                <img src="./images/sun.png" alt="sun">
+            </div>
+            <div class="wrapper__item">6</div>
+        </div>
+        <div class="wrapper__line">
+            <div class="wrapper__item">7</div>
+            <div class="wrapper__item">8</div>
+            <div class="wrapper__item">9</div>
+        </div>
+    </div>
     
 </body>
 </html>
