added secondary elements 'two speakers' and 'vinyl player'

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jump_Around_Sun</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
     <div class="wrapper">
         <div class="wrapper__line">
-            <div class="wrapper__item">1</div>
+            <div class="wrapper__item">
+                <img src="./images/speaker.png" alt="speaker_left">
+            </div>
             <div class="wrapper__item">2</div>
-            <div class="wrapper__item">3</div>
+            <div class="wrapper__item">
+                <img src="./images/speaker.png" alt="speaker_right">
+            </div>
         </div>
         <div class="wrapper__line">
             <div class="wrapper__item">4</div>
@@ -23,9 +29,11 @@
         <div class="wrapper__line">
             <div class="wrapper__item">7</div>
             <div class="wrapper__item">8</div>
-            <div class="wrapper__item">9</div>
+            <div class="wrapper__item">
+                <img src="./images/player.png" alt="player_vinyl">
+            </div>
         </div>
     </div>
-    
 </body>
+
 </html>
