--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="wrapper__line">
             <div class="wrapper__item">4</div>
-            <div class="wrapper__item">
+            <div class="wrapper__item main-object">
                 <img src="./images/sun.png" alt="sun">
             </div>
             <div class="wrapper__item">6</div>
