--- a/index.html
+++ b/index.html
@@ -22,7 +22,27 @@
         <div class="wrapper__line">
             <div class="wrapper__item">4</div>
             <div class="wrapper__item main-object">
-                <img src="./images/sun.png" alt="sun">
+                <div class="wrapper__block">
+                    <div class="wrapper__element">5-1-1</div>
+                    <div class="wrapper__element">5-1-2</div>
+                    <div class="wrapper__element">5-1-3</div>
+                </div>
+                <div class="wrapper__block">
+                    <div class="wrapper__element">hand left</div>
+                    <div class="wrapper__element">
+                        <div class="element-bady">eyes</div>
+                        <div class="element-bady">
+                            <img src="./images/sun.png" alt="sun">
+                        </div>
+                        <div class="element-bady">mouth</div>
+                    </div>
+                    <div class="wrapper__element">hand right</div>
+                </div>
+                <div class="wrapper__block">
+                    <div class="wrapper__element">5-3-1</div>
+                    <div class="wrapper__element">5-3-2</div>
+                    <div class="wrapper__element">5-3-3</div>
+                </div>
             </div>
             <div class="wrapper__item">6</div>
         </div>
