positioning of the eyes and mouth relative to the body 'sun'

--- a/index.html
+++ b/index.html
@@ -12,46 +12,27 @@
     <div class="wrapper">
         <div class="wrapper__line">
             <div class="wrapper__item">
-                <img src="./images/speaker.png" alt="speaker_left">
+                <img class="speaker" src="./images/speaker.png" alt="speaker_left">
             </div>
-            <div class="wrapper__item">2</div>
+            <div class="wrapper__item wrapper__item--mod">
+                <!-- <img class="player" src="./images/player.png" alt="player_vinyl"> -->
+            </div>
             <div class="wrapper__item">
-                <img src="./images/speaker.png" alt="speaker_right">
+                <img class="speaker" src="./images/speaker.png" alt="speaker_right">
             </div>
         </div>
         <div class="wrapper__line">
-            <div class="wrapper__item">4</div>
-            <div class="wrapper__item main-object">
-                <div class="wrapper__block">
-                    <div class="wrapper__element">5-1-1</div>
-                    <div class="wrapper__element">5-1-2</div>
-                    <div class="wrapper__element">5-1-3</div>
+            <div class="wrapper__item">left hand</div>
+            <div class="wrapper__item wrapper__item--body">
+                <div class="element-body-up">
+                    <img class="sun_eyes" src="./images/eyes/11.png" alt="eyes">
                 </div>
-                <div class="wrapper__block">
-                    <div class="wrapper__element">hand left</div>
-                    <div class="wrapper__element">
-                        <div class="element-bady">eyes</div>
-                        <div class="element-bady">
-                            <img src="./images/sun.png" alt="sun">
-                        </div>
-                        <div class="element-bady">mouth</div>
-                    </div>
-                    <div class="wrapper__element">hand right</div>
-                </div>
-                <div class="wrapper__block">
-                    <div class="wrapper__element">5-3-1</div>
-                    <div class="wrapper__element">5-3-2</div>
-                    <div class="wrapper__element">5-3-3</div>
+                <img class="sun_body" src="./images/sun.png" alt="sun">
+                <div class="element-body-down">
+                    <img class="sun_mouth" src="./images/mouth/smile1.png" alt="">
                 </div>
             </div>
-            <div class="wrapper__item">6</div>
-        </div>
-        <div class="wrapper__line">
-            <div class="wrapper__item">7</div>
-            <div class="wrapper__item">8</div>
-            <div class="wrapper__item">
-                <img src="./images/player.png" alt="player_vinyl">
-            </div>
+            <div class="wrapper__item">right hand</div>
         </div>
     </div>
 </body>
