--- a/index.html
+++ b/index.html
@@ -11,17 +11,6 @@
 <body>
     <div class="wrapper">
         <div class="wrapper__line">
-            <div class="wrapper__item">
-                <img class="speaker" src="./images/speaker.png" alt="speaker_left">
-            </div>
-            <div class="wrapper__item wrapper__item--mod">
-                <!-- <img class="player" src="./images/player.png" alt="player_vinyl"> -->
-            </div>
-            <div class="wrapper__item">
-                <img class="speaker" src="./images/speaker.png" alt="speaker_right">
-            </div>
-        </div>
-        <div class="wrapper__line">
             <div class="wrapper__item">left hand</div>
             <div class="wrapper__item wrapper__item--body">
                 <div class="element-body-up">
@@ -33,6 +22,18 @@
                 </div>
             </div>
             <div class="wrapper__item">right hand</div>
+        </div>
+        <div class="wrapper__line">
+            <div class="wrapper__item">
+                <img class="speaker" src="./images/speaker.png" alt="speaker_left">
+            </div>
+            <div class="wrapper__item wrapper__item--mod">
+                <img class="player" src="./images/player.png" alt="player_vinyl">
+                <img class="vinyl" src="./images/vinyl.png" alt="vinyl">
+            </div>
+            <div class="wrapper__item">
+                <img class="speaker" src="./images/speaker.png" alt="speaker_right">
+            </div>
         </div>
     </div>
 </body>
