--- a/index.html
+++ b/index.html
@@ -9,19 +9,36 @@
 </head>
 
 <body>
+    <audio preload="auto" loop autoplay src="./audio/house_of_pain _ jump_around.mp3">
+        Браузер не поддерживает воспроизведение звуковых медиафайлов
+    </audio>
     <div class="wrapper">
-        <div class="wrapper__line">
-            <div class="wrapper__item">left hand</div>
+        <div class="wrapper__line wrapper__line--mod">
+            <div class="wrapper__item wrapper__item--hand-right">
+                <div class="wrapper__block-right_hand_four">
+                    <img class="right_hand_four" src="./images/hand/four.png" alt="right_hand">
+                </div>
+                <div class="wrapper__block-right_hand_like">
+                    <img class="right_hand_like" src="./images/hand/like.png" alt="right_hand_like">
+                </div>
+            </div>
             <div class="wrapper__item wrapper__item--body">
                 <div class="element-body-up">
-                    <img class="sun_eyes" src="./images/eyes/11.png" alt="eyes">
+                    <img class="sun_eyes" src="./images/eyes/eyes_down.png" alt="eyes">
                 </div>
                 <img class="sun_body" src="./images/sun.png" alt="sun">
                 <div class="element-body-down">
                     <img class="sun_mouth" src="./images/mouth/smile1.png" alt="">
                 </div>
             </div>
-            <div class="wrapper__item">right hand</div>
+            <div class="wrapper__item wrapper__item--hand-left">
+                <div class="wrapper__block-left_hand_four">
+                    <img class="left_hand_four" src="./images/hand/four.png" alt="left_hand">
+                </div>
+                <div class="wrapper__block-left_hand_like">
+                    <img class="left_hand_like" src="./images/hand/like.png" alt="leftt_hand_like">
+                </div>
+            </div>
         </div>
         <div class="wrapper__line">
             <div class="wrapper__item">
