added antimation (:hover & :active) for elements 'eyes' and 'mouth'

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             </div>
             <div class="wrapper__item wrapper__item--body">
                 <div class="element-body-up">
-                    <img class="sun_eyes" src="./images/eyes/eyes_down.png" alt="eyes">
+                    <img class="sun_eyes_down" src="./images/eyes/eyes_down.png" alt="eyes_down">
+                    <img class="sun_eyes_up" src="./images/eyes/eyes_up.png" alt="eyes_up">
+                    <img class="sunglasses" src="./images/other/sunglasses.png" alt="sunglasses">
                 </div>
                 <img class="sun_body" src="./images/sun.png" alt="sun">
                 <div class="element-body-down">
-                    <img class="sun_mouth" src="./images/mouth/smile1.png" alt="">
+                    <img class="sun_mouth_smile" src="./images/mouth/mouth_smile.png" alt="mouth_smile">
+                    <img class="sun_mouth_angry" src="./images/mouth/mouth_angry.png" alt="mouth_angry">
                 </div>
             </div>
             <div class="wrapper__item wrapper__item--hand-left">
@@ -41,14 +44,14 @@
             </div>
         </div>
         <div class="wrapper__line">
-            <div class="wrapper__item">
+            <div class="wrapper__item wrapper__item--spec">
                 <img class="speaker" src="./images/speaker.png" alt="speaker_left">
             </div>
             <div class="wrapper__item wrapper__item--mod">
                 <img class="player" src="./images/player.png" alt="player_vinyl">
                 <img class="vinyl" src="./images/vinyl.png" alt="vinyl">
             </div>
-            <div class="wrapper__item">
+            <div class="wrapper__item wrapper__item--spec">
                 <img class="speaker" src="./images/speaker.png" alt="speaker_right">
             </div>
         </div>
