--- a/index.html
+++ b/index.html
@@ -11,33 +11,43 @@
 <body>
     <div class="wrapper">
         <div class="wrapper__line wrapper__line--mod">
+            <div class="wrapper__item wrapper__item--youtube">
+                <a class="wrapper__link" href="#">
+                    <img class="wrapper__img--youtube" src="./images/youtube.png" alt="youtube">
+                </a>
+            </div>
             <div class="wrapper__item wrapper__item--hand-right">
                 <div class="wrapper__block-right_hand_four">
-                    <img class="right_hand_four" src="./images/hand/four.png" alt="right_hand">
+                    <img class="right_hand_four" src="./images/four.png" alt="right_hand">
                 </div>
                 <div class="wrapper__block-right_hand_like">
-                    <img class="right_hand_like" src="./images/hand/like.png" alt="right_hand_like">
+                    <img class="right_hand_like" src="./images/like.png" alt="right_hand_like">
                 </div>
             </div>
             <div class="wrapper__item wrapper__item--body">
                 <div class="element-body-up">
-                    <img class="sun_eyes_down" src="./images/eyes/eyes_down.png" alt="eyes_down">
-                    <img class="sun_eyes_up" src="./images/eyes/eyes_up.png" alt="eyes_up">
-                    <img class="sunglasses" src="./images/other/sunglasses.png" alt="sunglasses">
+                    <img class="sun_eyes_down" src="./images/eyes_down.png" alt="eyes_down">
+                    <img class="sun_eyes_up" src="./images/eyes_up.png" alt="eyes_up">
+                    <img class="sunglasses" src="./images/sunglasses.png" alt="sunglasses">
                 </div>
                 <img class="sun_body" src="./images/sun.png" alt="sun">
                 <div class="element-body-down">
-                    <img class="sun_mouth_smile" src="./images/mouth/mouth_smile.png" alt="mouth_smile">
-                    <img class="sun_mouth_angry" src="./images/mouth/mouth_angry.png" alt="mouth_angry">
+                    <img class="sun_mouth_smile" src="./images/mouth_smile.png" alt="mouth_smile">
+                    <img class="sun_mouth_angry" src="./images/mouth_angry.png" alt="mouth_angry">
                 </div>
             </div>
             <div class="wrapper__item wrapper__item--hand-left">
                 <div class="wrapper__block-left_hand_four">
-                    <img class="left_hand_four" src="./images/hand/four.png" alt="left_hand">
+                    <img class="left_hand_four" src="./images/four.png" alt="left_hand">
                 </div>
                 <div class="wrapper__block-left_hand_like">
-                    <img class="left_hand_like" src="./images/hand/like.png" alt="leftt_hand_like">
+                    <img class="left_hand_like" src="./images/like.png" alt="leftt_hand_like">
                 </div>
+            </div>
+            <div class="wrapper__item wrapper__item--google_maps">
+                <a class="wrapper__link" href="#">
+                    <img class="wrapper__img--google_maps" src="./images/google_maps.png" alt="google_maps">
+                </a>
             </div>
         </div>
         <div class="wrapper__line">
@@ -58,9 +68,6 @@
             <div class="wrapper__item wrapper__item--spec">
                 <img class="speaker" src="./images/speaker.png" alt="speaker_right">
             </div>
-        </div>
-        <div class="wrapper__line wrapper__line--spec">
-
         </div>
     </div>
 </body>
