--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jump_Around_Sun</title>
+    <title>Sun_Jump_Around</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="wrapper__line wrapper__line--mod">
             <div class="wrapper__item wrapper__item--youtube">
-                <a class="wrapper__link" href="#">
+                <a class="wrapper__link" href="./pages/google.html">
                     <img class="wrapper__img--youtube" src="./images/youtube.png" alt="youtube">
                 </a>
             </div>
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="wrapper__item wrapper__item--google_maps">
-                <a class="wrapper__link" href="#">
+                <a class="wrapper__link" href="./pages/google.html">
                     <img class="wrapper__img--google_maps" src="./images/google_maps.png" alt="google_maps">
                 </a>
             </div>
