First public release: all minor bugs fixed

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                     <img class="wrapper__img--google_maps" src="./images/google_maps.png" alt="google_maps">
                 </a>
             </div>
+
         </div>
         <div class="wrapper__line">
-            <div class="wrapper__item wrapper__item--spec">
-                <img class="speaker" src="./images/speaker.png" alt="speaker_left">
+            <div class="wrapper__item wrapper__item--spec_left">
+                <img class="speaker_left" src="./images/speaker.png" alt="speaker_left">
             </div>
             <div class="wrapper__item wrapper__item--mod">
                 <div class="wrapper__block-player">
@@ -65,8 +66,8 @@
                     </audio>
                 </div>
             </div>
-            <div class="wrapper__item wrapper__item--spec">
-                <img class="speaker" src="./images/speaker.png" alt="speaker_right">
+            <div class="wrapper__item wrapper__item--spec_right">
+                <img class="speaker_right" src="./images/speaker.png" alt="speaker_right">
             </div>
         </div>
     </div>
