Corrected audio file name (spaces removed).

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img class="left_hand_four" src="./images/four.png" alt="left_hand">
                 </div>
                 <div class="wrapper__block-left_hand_like">
-                    <img class="left_hand_like" src="./images/like.png" alt="leftt_hand_like">
+                    <img class="left_hand_like" src="./images/like.png" alt="left_hand_like">
                 </div>
             </div>
             <div class="wrapper__item wrapper__item--google_maps">
@@ -61,7 +61,7 @@
                     <img class="vinyl" src="./images/vinyl.png" alt="vinyl">
                 </div>
                 <div class="wrapper__block-controls">
-                    <audio preload="auto" controls src="./audio/house_of_pain _ jump_around.mp3">
+                    <audio preload="auto" controls src="./audio/house_of_pain_jump_around.mp3">
                         Браузер не поддерживает воспроизведение звуковых медиафайлов
                     </audio>
                 </div>
